[Update]: Fix toast z-index, implicity auto call

--- a/src/app/components/toast/toast.component.scss
+++ b/src/app/components/toast/toast.component.scss
@@ -52,6 +52,7 @@ $colors: (
   margin: 20px;
   border-radius: 6px;
   column-gap: 4%;
+  z-index: 11;
 
   &.active {
     visibility: visible;
